# agent-internet

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.well-known/: agent-federation.json
agent_internet/: __init__.py  agent_city_bridge.py  agent_city_contract.py  agent_city_directive_bridge.py  agent_city_directives.py  agent_city_immigration.py  agent_city_mission_bridge.py  agent_city_peer.py  agent_city_phase_tick_bridge.py  agent_web.py  agent_web_browser.py  agent_web_browser_compress.py  agent_web_browser_content.py  agent_web_browser_control_plane.py  agent_web_browser_env.py  agent_web_browser_github.py  agent_web_browser_http.py  agent_web_browser_nadi.py  agent_web_browser_parser.py  agent_web_browser_semantic.py  agent_web_crawl.py  agent_web_federated_index.py  agent_web_graph.py  agent_web_index.py  agent_web_navigation.py  agent_web_repo_graph.py  agent_web_repo_graph_capabilities.py  agent_web_repo_graph_contracts.py  agent_web_semantic_capabilities.py  agent_web_semantic_consumer.py  agent_web_semantic_contracts.py  agent_web_semantic_graph.py  agent_web_semantic_overlay.py  agent_web_source_registry.py  agent_web_wordnet_bridge.py  assistant_surface.py  authority_contracts.py  authority_feed_sync.py  cli.py  contract_verification.py  (+40 more)
docs/: ARCHITECTURE.md  AUTHORITY_FEED_CONTRACT_V1.md  BRIDGE_TOKEN_RUNBOOK.md  BROWSER_BACKEND_INTEGRATION.md  COMMONS_MODEL_V1.md  FEDERATION_DESCRIPTOR_V1.md  FORK_AND_DISCUSSIONS_BOUNDARY.md  GITHUB_NATIVE_MODEL.md  MOLTBOOK_BOUNDARY_PASS.md  PUBLIC_EDGE_ARCHITECTURE.md  PUBLIC_FEDERATION_SURFACE.md  (+1 more)
(+81 files in other folders)
