[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agent-internet"
version = "0.1.1"
description = "Federation control plane for Agent City mesh networking"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "agents"}]
keywords = ["agents", "federation", "network", "mesh", "control-plane"]
dependencies = [
    "nadi-kit @ git+https://github.com/kimeisele/steward-federation.git#egg=nadi-kit",
]

[project.optional-dependencies]
substrate = ["steward-protocol[web,crypto]"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[project.scripts]
agent-internet = "agent_internet.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent_internet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
